# cism_2024_trom

./: .gitignore  README.md  pyproject.toml
src/cism_2024_trom/constraints/: __init__.py  eq_constraint.py
src/cism_2024_trom/elements/: __init__.py  bar.py  cable.py  circular_cross_section.py  disk_cross_section.py  element.py  hollow_disk_cross_section.py  material.py  typing.py
src/cism_2024_trom/integrators/: __init__.py  rk4.py
src/cism_2024_trom/typing/: __init__.py
tests/: test_bar.py  test_cable.py  test_material.py
