[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "cism_2024_trom"
version = "0.0.1"
authors = [
  { name="Kévin Garanger", email="kgarange@uci.edu" },
]
description = "A package for the reduced order modeling of tensegrity structures for the 2024 CISM workshop."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy"
    ]

[project.urls]
"Homepage" = "https://github.com/kgaranger/cism_2024_trom"
"Bug Tracker" = "https://github.com/kgaranger/cism_2024_trom/issues"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["cism_2024_trom", "tests"]

[tool.isort]
src_paths = ["src"]
